[package]
name = "beeg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "easy big number conversion"
repository = "https://github.com/bend-n/beeg"
authors = ["bendn <bend.n@outlook.com>"]

[dependencies]
comat = "0.1.3"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.3"
